# darklock-secure-notes

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/pages/: index.ts
apps/desktop/src/services/: crypto.ts  tauri-bridge.ts
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/styles/: app.css
apps/server/: package.json
apps/server/src/: index.ts
apps/server/src/db/: queries.ts  schema.ts
apps/server/src/middleware/: auth.ts  validation.ts
apps/server/src/routes/: auth.ts  notes.ts  sync.ts
apps/server/tests/: api.test.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: NoteEditor.tsx  TopBar.tsx
apps/web/src/pages/: Charts.tsx  Collaborators.tsx  Library.tsx  Search.tsx  Settings.tsx  SetupWizard.tsx  Sharing.tsx  Sync.tsx  Trash.tsx  UnlockScreen.tsx  Workspace.tsx
apps/web/src/services/: api.ts  crypto.ts
apps/web/src/stores/: appStore.ts
apps/web/src/styles/: app.css
