[package]
name = "darklock-notes"
version = "0.1.0"
description = "Darklock Secure Notes — E2E encrypted note-taking"
authors = ["Darklock"]
edition = "2021"

[lib]
name = "darklock_notes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
dirs = "5"
thiserror = "1"
